--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-30  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (lt_cv_file_magic_cmd): Don't use '${MAGIC_CMD}' or
+	'${OBJDUMP}'; Solaris' /bin/sh loses with `}' in cache files.
+	(ac_cv_path_MAGIC_CMD): Renamed to lt_cv_path_MAGIC_CMD.
+
 2000-09-28  Gary V. Vaughan  <gvv@techie.com>
 
 	* libtool.m4 (MAGIC_CMD): Don't use MAGIC, since BSD versions of
