--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-10  Alexandre Oliva  <aoliva@redhat.com>
+
+	* libtool.m4 (AC_LIBTOOL_CXX, AC_LIBTOOL_GCJ): Pass LD down to
+	ltconfig.
+
 2000-10-02  Gary V. Vaughan  <gvv@techie.com>
 
 	From Bruce Korb <bkorb@cruzio.com>
