--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3889,6 +3889,20 @@ SGI's IRIX Manual Pages, which can be found at
 Sun's free service area
 (@url{http://www.sun.com/service/online/free.html}) and documentation
 server (@url{http://docs.sun.com/}).
+
+@item       
+Compaq's Tru64 UNIX online documentation is at       
+(@url{http://tru64unix.compaq.com/faqs/publications/pub_page/doc_list.html})
+with C++ documentation at         
+(@url{http://tru64unix.compaq.com/cplus/docs/index.htm}).         
+
+@item         
+Hewlett-Packard has online documentation at         
+(@url{http://docs.hp.com/index.html}).         
+
+@item         
+IBM has online documentation at         
+(@url{http://www.rs6000.ibm.com/resource/aix_resource/Pubs/}). 
 @end itemize
 
 @node Compilers
