* libtool.m4 (archive_expsym_cmds):  Support for -export-symbol option on Tru64. (hardcode_libdir_flag_spec): Fixed cxx throwing error while using libtool.  Done by passing -rpath directlty to the compiler.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-10-30  Aneesh Kumar K.V <kvaneesh@hotmail.com>
+
+	* libtool.m4 (archive_expsym_cmds):  Support for -export-symbol
+	option on Tru64.
+	(hardcode_libdir_flag_spec): Fixed cxx throwing error while using
+	libtool.  Done by passing -rpath directlty to the compiler.
+
 2000-10-27  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* docs/libtool.texi: Added pointers to documentation       
