--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-30  Ossama Othman  <ossama@debian.org>
+
+	* libtool.m4 (archive_expsym_cmds): Fix typo where line was broken
+	in the middle of an expression.
+
 2000-10-30  Aneesh Kumar K.V <kvaneesh@hotmail.com>
 
 	* libtool.m4 (archive_expsym_cmds):  Support for -export-symbol
