--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-30  Aneesh Kumar K.V <kvaneesh@hotmail.com>
+
+	* ltcf-c.sh (archive_expsym_cmds):  Support for -export-symbol
+        option on Tru64.
+
 2000-10-30  Robert Boehne  <rboehne@ricardo-us.com>
 
 	* ltcf-c.sh, ltcf-cxx.sh (hardcode_libdir_flag_spec,
