--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-10-31  Gary V. Vaughan  <gvv@techie.com>
+
+	* bootstrap:  rm Makefiles to prevent infinite loop during
+	configure when libtool.m4 is newer than Makefile.
+
 2000-10-31  Akim Demaille  <akim@epita.fr>
 
 	* libtool.m4: Adjust the copyright notice.
