--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -26,28 +26,20 @@ This file documents GNU Libtool @value{VERSION}
 
 Copyright (C) 1996-2000 Free Software Foundation, Inc.
 
-Permission is granted to make and distribute verbatim copies of this
-manual provided the copyright notice and this permission notice are
-preserved on all copies.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.1
+or any later version published by the Free Software Foundation;
+with the no Invariant Sections, with no Front-Cover Texts,
+and with no Back-Cover Texts.  A copy of the license is included in
+the section entitled "GNU Free Documentation License".
 
 @ignore
 Permission is granted to process this file through TeX and print the
 results, provided the printed document carries copying permission notice
 identical to this one except for the removal of this paragraph
 
-
 @end ignore
-Permission is granted to copy and distribute modified versions of this
-manual under the conditions for verbatim copying, provided that the
-entire resulting derived work is distributed under the terms of a
-permission notice identical to this one.
-
-Permission is granted to copy and distribute translations of this manual
-into another language, under the above conditions for modified versions,
-except that this permission notice may be stated in a translation
-approved by the Foundation.
 @end ifinfo
-
 
 @titlepage
 @title GNU Libtool
@@ -61,19 +53,13 @@ approved by the Foundation.
 @vskip 0pt plus 1filll
 Copyright @copyright{} 1996-2000 Free Software Foundation, Inc.
 
-Permission is granted to make and distribute verbatim copies of this
-manual provided the copyright notice and this permission notice are
-preserved on all copies.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.1
+or any later version published by the Free Software Foundation;
+with the no Invariant Sections, with no Front-Cover Texts,
+and with no Back-Cover Texts.  A copy of the license is included in
+the section entitled "GNU Free Documentation License".
 
-Permission is granted to copy and distribute modified versions of this
-manual under the conditions for verbatim copying, provided that the
-entire resulting derived work is distributed under the terms of a
-permission notice identical to this one.
-
-Permission is granted to copy and distribute translations of this manual
-into another language, under the above conditions for modified versions,
-except that this permission notice may be stated in a translation
-approved by the Free Software Foundation.
 @end titlepage
 
 @c Put everything in one index (arbitrarily chosen to be the concept index).
@@ -108,6 +94,7 @@ libtool.
 * Other languages::             Using libtool without a C compiler.
 * Troubleshooting::             When libtool doesn't work as advertised.
 * Maintaining::                 Information used by the libtool maintainer.
+* GNU Free Documentation License:: License for this manual.
 * Index::                       Full index.
 
 @detailmenu --- The Detailed Node Listing ---
@@ -4453,6 +4440,8 @@ The output of the final @samp{libtool --version} command shows that the
 @code{ltmain.in} script is being used directly.  Now, modify
 @code{~/bin/libtool} or @code{/home/src/libtool/ltmain.in} directly in
 order to test new changes without having to rerun @code{configure}.
+
+@include fdl.texi
 
 @page
 @node Index
