--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-17  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltdl.c: Reformatted.
+	* ltdl.h: ditto.
+	
 2000-11-11  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltdl.m4 (AC_LTDL_SYMBOL_USCORE): Use $ac_ext for conftest
