--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-11-19  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltdl.c: Relegate non-POSIX-compliant symbols (e.g. those
+	ending in ``_t'') to deprecated #define compatibility macros.
+	Also ease up on the namespace pollution, so that only ``lt_''
+	and ``LT_'' prefixes are taken from the global namespace.
+	* ltdl.h: ditto.
+
 2000-11-17  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltdl.c: Reformatted.
@@ -36,7 +44,7 @@
 
 2000-10-30  Gary V. Vaughan  <gvv@techie.com>
 
-	* doc/libtool.texi:  Corrected nother attack of CRLF line
+	* doc/libtool.texi:  Corrected another attack of CRLF line
 	endings.
 
 2000-10-30  Ossama Othman  <ossama@debian.org>
