* ltmain.in: Some versions of expr respond with "0" if a regexp fails to match.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2000-11-19  Paul Berrevoets  <paul@swi.com>       
+2000-11-20  Paul Berrevoets  <paul@swi.com>
+
+	* ltmain.in: Some versions of expr respond with "0" if a
+	regexp fails to match.
+
+2000-11-19  Paul Berrevoets  <paul@swi.com>
        
 	* libtool.m4 (_LT_AC_LTCONFIG_HACK): Quote the $ in $#, $2 and
 	$3 in variable 'archive_expsym_cmds' for cygwin.
