--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-14  Akim Demaille  <akim@epita.fr>
+
+	* libtool.m4:  Don't depend on Autoconf internals:
+	s/ac_cv_prog_gcc/GCC/.
+
 2000-11-29  Gary V. Vaughan  <gvv@techie.com>
 
 	* libltdl/ltdl.h (lt_dlhandle): Rename the wrapped structure
