--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2000-12-15  Akim Demaille  <akim@epita.fr>
+
+	* libtool.m4 (AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE): Rename
+	`ac_cv_sys_global_symbol_pipe' as `lt_cv_sys_global_symbol_pipe'.
+	Similarly with `lt_cv_global_symbol_to_cdecl
+	(_LT_AC_LTCONFIG_HACK): Similarly with `ac_cv_prog_cc_pic',
+	`ac_cv_prog_cc_shlib', `ac_cv_prog_cc_wl', `ac_cv_prog_cc_static',
+	`ac_cv_prog_cc_no_builtin', `ac_cv_prog_cc_can_build_shared',
+	`ac_cv_prog_cc_static_works', `ac_cv_archive_cmds_need_lc'.
+	(AC_PATH_TOOL_PREFIX): Similarly with `ac_cv_path_MAGIC_CMD'
+	(AC_PROG_LD) <ac_cv_path_LD>: Likewise.
+	(AC_PROG_LD_GNU) <ac_cv_prog_gnu_ld>: Likewise.
+	(AC_PROG_NM) <ac_cv_path_NM>: Likewise.
+
 2000-12-15  Utz-Uwe Haus  <haus@mail.math.uni-magdeburg.de>
 
 	* libltdl/ltdl.c (lt_dlopen): Changed "dl_dependency_libs" keyword
