--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-12-15  Akim Demaille  <akim@epita.fr>
+
+	* libtool.m4 (AC_PATH_TOOL_PREFIX): Similarly with
+	`ac_cv_path_MAGIC_CMD'
+	(AC_PROG_LD) <ac_cv_path_LD>: Likewise.
+	(AC_PROG_LD_GNU) <ac_cv_prog_gnu_ld>: Likewise.
+	(AC_PROG_NM) <ac_cv_path_NM>: Likewise.
+
 2000-12-15  Utz-Uwe Haus  <haus@mail.math.uni-magdeburg.de>
 
 	* libltdl/ltdl.c (lt_dlopen): Changed "dl_dependency_libs" keyword
