--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-16  Nick Hudson  <skrll@netbsd.org>
+
+	* ltconfig.in (netbsd*, deplibs_check_method): Enable ILD support
+	for NetBSD a.out.
+	
 2000-12-15  Akim Demaille  <akim@epita.fr>
 
 	* libtool.m4 (AC_PATH_TOOL_PREFIX): Similarly with
